# AgenticSqlAgent

./: ENV_TEMPLATE  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
backend/: Dockerfile  agent.py  config.py  database.py  main.py
data/: sales.db
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.css  App.jsx
